add theory and simulation

--- a/ODMSGD.ipynb
+++ b/ODMSGD.ipynb
@@ -502,7 +502,8 @@
     "# RSE/MCSD at step   10000: [3.4469 3.1051 3.6628 2.5328 3.5249 2.7492]\n",
     "# PSE/MCSD at step  100000: [0.9131 0.7468 0.8249 0.8306 0.8807 0.8283]\n",
     "# RSE/MCSD at step  100000: [1.6973 1.7439 1.9881 1.9313 2.7306 2.1652]\n",
-    "\n"
+    "# PSE/MCSD at step 1000000: [1.0154 0.9238 0.9322 1.0008 1.0027 0.9008]\n",
+    "# RSE/MCSD at step 1000000: [1.1529 1.1247 1.1491 1.2893 1.324  1.2545]"
    ]
   },
   {
